@@ -15,6 +15,19 @@ namespace VehicleSelector
     public sealed class Loading : PatcherLoadingBase<OptionsPanel, PatcherBase>
     {
         /// <summary>
+        /// Performs any actions upon successful creation of the mod.
+        /// E.g. Can be used to patch any other mods.
+        /// </summary>
+        /// <param name="loading">Loading mode (e.g. game or editor).</param>
+        protected override void CreatedActions(ILoading loading)
+        {
+            base.CreatedActions(loading);
+
+            // Check for barges mod.
+            CargoTruckAIPatches.CheckMods();
+        }
+
+        /// <summary>
         /// Performs any actions upon successful level loading completion.
         /// </summary>
         /// <param name="mode">Loading mode (e.g. game, editor, scenario, etc.).</param>
